[tool.poetry]
name = "rate-limiting"
version = "0.1.0"
description = "An example of rate limiting on a rest API"
authors = ["Lucas Connell <hello@luxas.xyz>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
dependency-injector = "^4.39.1"
redis = ">=4.2"
pydantic = "^1.9.1"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pytest = "^7.1.2"

[tool.black]
line-length = 99
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
